# OpenGTA2

./: .gitignore  .travis.yml  CMakeLists.txt
opengta2/: anim.cpp  anim.h  camera.cpp  camera.h  chunkload.h  clientlist.cpp  clientlist.h  cmain.cpp  collision.cpp  collision.h  console.cpp  console.h  convar.cpp  convar.h  darray.h  debugtest.cpp  draw.cpp  draw.h  font.cpp  font.h  format_rmp.h  game.cpp  game.h  graphics.cpp  graphics.h  input.cpp  input.h  input_keys.h  log.cpp  log.h  main.cpp  malloc.h  map.cpp  map.h  map_geom.cpp  map_geom.h  map_geom_cl.cpp  map_geom_cl.h  map_render.cpp  map_render.h  (+33 more)
tools/: opengta_tools.sln
tools/Backup/: opengta_tools.sln
tools/chunkmerge/: chunkmerge.cpp  chunkmerge.vcxproj  chunkmerge.vcxproj.filters
tools/genfont/: genfont.cpp  genfont.vcxproj  genfont.vcxproj.filters
tools/gmp2map/: gmp2map.cpp  gmp2map.vcxproj  gmp2map.vcxproj.filters
tools/sdt2wav/: sdt2wav.cpp  sdt2wav.vcxproj  sdt2wav.vcxproj.filters
tools/shared/: texatlas.cpp  texatlas.h
tools/sty2tex/: sty2tex.cpp  sty2tex.h  sty2tex.vcxproj  sty2tex.vcxproj.filters  tilewrite.cpp
tools/txt2chunked/: txt2chunked.cpp  txt2chunked.vcxproj  txt2chunked.vcxproj.filters
